tests/NormalTests/paczka1/small_fuzzy/42501233.err
Error in line 4: Bj2dN2deB A717 52,9
Error in line 9: bMqP0HGhh S616 24,6
Error in line 3: xuY A717 47,9
